--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta charset="utf-8"/>
-<title><%= htmlWebpackPlugin.options.title %></title>
+    <meta charset="utf-8" />
+    <title>
+        <%= htmlWebpackPlugin.options.title %>
+    </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 </head>
+
 <body>
-<div id="root"></div>
+    <div id="root"></div>
 </body>
+
 </html>
