--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
 
 <body>
     <div id="root"></div>
+    <script src="http://localhost/ckeditor5-ckfinder3-react-php/ckfinder/ckfinder.js"></script>
 </body>
 
 </html>
