--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <title>
         <%= htmlWebpackPlugin.options.title %>
     </title>
+    <meta name="google-site-verification" content="nLFokNF5En6OjdAvNsx8h25mhv4UHZsY6KD7Ep-wTNg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
